--- a/myproman-api/pom.xml
+++ b/myproman-api/pom.xml
@@ -55,8 +55,8 @@
             <output>${project.build.directory}/generated-sources</output>
             <language>spring</language>
             <library>spring-boot</library>
-            <generatedApis>false</generatedApis>
-            <generatedModels>true</generatedModels>
+            <generateApis>false</generateApis>
+            <generateModels>true</generateModels>
             <modelPackage>practise.myproman.api.model</modelPackage>
             <configOptions>
               <java8>true</java8>
