--- a/myproman-service/pom.xml
+++ b/myproman-service/pom.xml
@@ -14,10 +14,20 @@
 
     <dependencies>
         <dependency>
-            <groupId>practise.myproman.api</groupId>
-            <artifactId>myproman-db</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
+
     </dependencies>
 
 </project>
