cofiguration and base setup is done.

--- a/myproman-api/pom.xml
+++ b/myproman-api/pom.xml
@@ -2,6 +2,7 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>practise.myproman.api</groupId>
     <artifactId>myproman</artifactId>
@@ -41,6 +42,11 @@
       <artifactId>springfox-swagger-ui</artifactId>
       <version>2.9.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.2</version>
+    </dependency>
 
   </dependencies>
 
@@ -59,6 +65,7 @@
             <generateModels>true</generateModels>
             <modelPackage>practise.myproman.api.model</modelPackage>
             <configOptions>
+              <modelFolder>${basedir}/src/main/java</modelFolder>
               <java8>true</java8>
               <sourceFolder>.</sourceFolder>
               <dateLibrary>java8</dateLibrary>
@@ -98,7 +105,48 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>${project.basedir}/src/main/java/practise/myproman/api/model</directory>
+              <includes>
+                <include>*.java</include>
+              </includes>
+              <followSymlinks>false</followSymlinks>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.basedir}/src/main/java/practise</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${project.build.directory}/generated-sources/practise</directory>
+                  <filtering>true</filtering>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
+
+
   </build>
 
 
