--- a/myproman-db/src/main/resources/config/localhost.properties
+++ b/myproman-db/src/main/resources/config/localhost.properties
@@ -4,3 +4,5 @@ server.port = 5433
 database.name = myproman
 database.user = postgres
 database.password = nikhilKuyya
+datasource.driverClassName=org.postgresql.Driver
+jpa.database-platform=org.hibernate.dialect.PostgreSQL12Dialect
