--- a/myproman-service/pom.xml
+++ b/myproman-service/pom.xml
@@ -29,6 +29,12 @@
             <version>3.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
